# cyphertrade-service-bus-contracts

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs
src/battle/: battle_participation_update.rs  battle_registration_update.rs  battle_status_update.rs  mod.rs
src/broker_affiliate/: event.rs  event_type.rs  mod.rs
src/commission/: mod.rs  platform_commission.rs
src/common/: mod.rs  status.rs  wallet_transaction_reason.rs
src/competition_position/: competition_positions.rs  competition_positions_pl_update.rs  mod.rs
src/contest/: contest_participation_update.rs  contest_registration_update.rs  contest_status_update.rs  contest_update.rs  mod.rs
src/profile/: mod.rs  personal_data_updated.rs  public_profile_update.rs
src/user/: mod.rs  user_login.rs  user_registered.rs  user_updated.rs
src/wallet/: mod.rs  wallet_transaction.rs  wallet_update.rs
src/xp_state/: mod.rs  xp_state_type.rs  xp_state_update.rs
